new html files have been added

--- a/Html,css,js/Coding/Html5/practicecode.html
+++ b/Html,css,js/Coding/Html5/practicecode.html
@@ -6,12 +6,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style type="text/css">
+        div {
+            border: solid 2px;
+            border-color: green;
+            padding: 10px 30x;
+            width: 300px;
+            resize: both;
+            overflow: auto;
+        }
+    </style>
 </head>
 
 <body>
-    <video src="Fortnite upload 21.mp4" controls="controls" muted="true" poster="Fortnite vibin.jpg" height="240pix" width="240pix">
+    <div>
+        <b>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias veritatis praesentium molestiae natus,
+            ipsa reiciendis eius sunt dolores commodi, ratione ex dolorem sit ab similique incidunt recusandae nostrum
+            aliquam voluptatum.
+        </b>
+    </div>
 
-    </video>
 </body>
 
 </html>
