css files have been added

--- a/Html,css,js/Coding/Html/headsetioncontents.html
+++ b/Html,css,js/Coding/Html/headsetioncontents.html
@@ -217,7 +217,7 @@ Example:
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="html5.png" type="image/ico" href="icon">
+<link rel="icon" type="image/ico" href="html5.png">
 </head>
 <body>
 Welcome to FavIcons..!!
