--- a/Html,css,js/Coding/css/practice.html
+++ b/Html,css,js/Coding/css/practice.html
@@ -9,30 +9,14 @@ this whole css folder folowws the same-->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style type="text/css">
-        th,
-        table {
-            color: red;
-        }
+    <style type="texr/css">
+
     </style>
 </head>
 
-<body>
-    <table border="full" aria-colspan="10px" aria-rowspan="10px">
-        <tr>
-            <th>&nbsp;</th>
-            <th>first</th>
-            <th>second</th>
-            <th>third</th>
-        </tr>
-        <tr aria-rowspan="50px">
-            <th>monday</th>
-            <td>tuesday</td>
-            <td>wednesday</td>
+<body ">
+   <div style="background-color:linear-gradient(purple,yellow); "><img src="TrollFace.png "></div> 
 
-        </tr>
-
-    </table>
 </body>
 
 </html>
