New files have been added

--- a/Html,css,js/Coding/Html/Lists.html
+++ b/Html,css,js/Coding/Html/Lists.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Navbar</title>
+
 </head>
 
 
@@ -43,6 +44,7 @@
         <li>HTML</li>
         <li>HTML</li>
         <li>HTML</li>
+
     </ol>
 
     roman numbers
@@ -75,6 +77,7 @@
         <li>HTML</li>
         <li>HTML</li>
     </ol>
+
     we can start from a specific number by using start attibute in the ol tag
     <ol start="250">
         <li>HTML</li>
