--- a/Html,css,js/Coding/Html/Tables.html
+++ b/Html,css,js/Coding/Html/Tables.html
@@ -111,7 +111,7 @@ Row Span extends cells on a vertical row (up and down).
 Syntax:    <TD ROWSPAN="X">
         -->
         <tr>
-            <th bgcolor="Yellow" colspan="12">TIME TABLE!!</th>
+            <th bgcolor="Yellow" colspan="13">TIME TABLE!!</th>
             <th bgcolor="yellow" rowspan="8">Days</th>
         </tr>
         <tr>
@@ -266,7 +266,7 @@ Example: (Vertical Headers)
     </table>
 
     normal alignment Example
-    <table border="1">
+    <table border="1" rules="all">
         <tr>
             <th>StdName</th>
             <th>Grade</th>
