--- a/Html,css,js/Coding/Html/headingtag.html
+++ b/Html,css,js/Coding/Html/headingtag.html
@@ -37,6 +37,8 @@ align left, right, center
     <h4 align="left">best</h4>
     <h5 align="center"> badder</h5>
     <h6 align="right">baddest</h6>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit debitis error cum tempore nam temporibus nostrum enim sint aut.
+        <hR>Voluptate accusamus culpa quod modi nobis, labore perspiciatis illo tempore cupiditate. </p>
 </body>
 
 </html>
