--- a/Html,css,js/Coding/OwnJavaScriptPages/Focusevent.html
+++ b/Html,css,js/Coding/OwnJavaScriptPages/Focusevent.html
@@ -9,12 +9,10 @@
     <script type="text/javascript" language="javascript">
         function disp() {
             document.f1.txt.value = "Enter age between 18 to 25";
-
         }
 
         function zinc() {
-            document.f1.txt.value = "Enter age between 18 to 25";
-
+            document.f1.txt.value = " ";
         }
     </script>
 </head>
