--- a/Html,css,js/Coding/OwnJavaScriptPages/Shadowstext.html
+++ b/Html,css,js/Coding/OwnJavaScriptPages/Shadowstext.html
@@ -9,7 +9,7 @@
 </head>
 
 <body bgcolor=tan>
-    <p style="font-size: 200px;filter:drop-shadow(5px 5px 8px blue)">Hello</p>\
+    <p style="font-size: 200px;filter:drop-shadow(5px 2px 5px red); ">Hello</p>\
     <p style="font-size: 200px;filter:drop-shadow(5px 5px 8px yellow);color: blue;">Hello</p>
 
 </body>
