--- a/Html,css,js/Coding/OwnJavaScriptPages/jsavgquestion.html
+++ b/Html,css,js/Coding/OwnJavaScriptPages/jsavgquestion.html
@@ -46,7 +46,7 @@
         top: 15%;
         left: 40%;
         right: 40%;
-        bottom: 15%;
+        bottom: 50%;
         background-color: silver;
         background-size: contain;
         border-radius: 17px;
@@ -74,14 +74,14 @@
             </tr>
             <tr>
                 <th> to sum of those numbers
-                    <td><input type="button" value="sum" onclick="sum()"></tr>
+                    <td align="center"><input type="button" value="sum" onclick="sum()"></tr>
             <tr>
                 <th>to get average of those numbers
-                    <td>
+                    <td align="center">
                         <input type="button" value="average" onclick="avg()"></tr>
             <tr>
                 <th>to get largest among those numbers
-                    <td><input type="button" value="largest " onclick="largest()"></tr>
+                    <td align="center"><input type="button" value="largest " onclick="largest()"></tr>
         </table>
     </form>
 </body>
