--- a/Html,css,js/Coding/Html5/googlepage.html
+++ b/Html,css,js/Coding/Html5/googlepage.html
@@ -9,8 +9,8 @@
     <style>
         body {
             background-image: url('Fortnite vibin.jpg');
-            background-size: 100% 100%;
             background-repeat: no-repeat;
+            background-size: cover;
         }
     </style>
 </head>
